--- a/search.html
+++ b/search.html
@@ -4,33 +4,39 @@
 		<title>Search</title>
 	</head>
 	<body>
-		<form
-			action="https://www.google.com/search"
-			method="get"
-		>
-			<input
-				type="search"
-				name="q"
-				placeholder="Search Google"
-				autocomplete="off"
-			/>
-			<input type="submit" />
-		</form>
+		<fieldset>
+			<legend>Google Search</legend>
+			<form
+				action="https://www.google.com/search"
+				method="get"
+			>
+				<input
+					type="search"
+					name="q"
+					placeholder="search..."
+					autocomplete="off"
+				/>
+				<input type="submit" />
+			</form>
+		</fieldset>
 
 		<br />
 		<br />
 
-		<form
-			action="https://www.google.com/maps"
-			method="get"
-		>
-			<input
-				type="search"
-				name="q"
-				placeholder="Search Google Maps"
-				autocomplete="off"
-			/>
-			<button>Search Maps</button>
-		</form>
+		<fieldset>
+			<legend>Google Maps Search</legend>
+			<form
+				action="https://www.google.com/maps"
+				method="get"
+			>
+				<input
+					type="search"
+					name="q"
+					placeholder="search..."
+					autocomplete="off"
+				/>
+				<button>Search Maps</button>
+			</form>
+		</fieldset>
 	</body>
 </html>
