--- a/sign-in.html
+++ b/sign-in.html
@@ -19,7 +19,7 @@
 				align-items: center;
 				height: 100vh;
 			}
-			.login-container {
+			.signin-container {
 				background-color: #fff;
 				padding: 40px;
 				border-radius: 8px;
@@ -28,12 +28,12 @@
 				margin: 20px;
 				box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 			}
-			.login-container h2 {
+			.signin-container h2 {
 				margin-bottom: 20px;
 				color: #b606b6;
 			}
-			.login-form input[type="email"],
-			.login-form input[type="password"] {
+			.signin-form input[type="email"],
+			.signin-form input[type="password"] {
 				width: calc(100% - 20px);
 				padding: 10px;
 				margin-bottom: 15px;
@@ -42,7 +42,7 @@
 				background-color: #f5f5f5;
 				border: 1px solid #ccc;
 			}
-			.login-form input[type="submit"] {
+			.signin-form input[type="submit"] {
 				background-color: #b606b6;
 				color: #fff;
 				border: none;
@@ -52,7 +52,7 @@
 				width: calc(100% - 20px);
 				font-weight: bold;
 			}
-			.login-form input[type="submit"]:hover {
+			.signin-form input[type="submit"]:hover {
 				background-color: #7c057c;
 			}
 			a {
@@ -64,7 +64,7 @@
 			a:hover {
 				text-decoration: 1px #b606b6 underline;
 			}
-			.login-form label {
+			.signin-form label {
 				display: block;
 				text-align: left;
 				margin-bottom: 5px;
@@ -73,9 +73,9 @@
 		</style>
 	</head>
 	<body>
-		<div class="login-container">
-			<h2>Login</h2>
-			<form class="login-form">
+		<div class="signin-container">
+			<h1>Sign In</h1>
+			<form class="signin-form">
 				<label for="email">E-mail</label>
 				<input
 					type="email"
